Fixed nav on mobile

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -527,7 +527,9 @@ nav {
 		border: none !important;
 		z-index: 3;
 		@media (max-width: @xs) {
-			display: none;
+			&.startpage {
+				display: none;
+			}
 		}
 		.navbar-right {
 			margin: 0;
